# ImLatent

./: .gitignore  README.md  environment.yml  pyproject.toml
Configs/: config_v0.yaml  config_v1.yaml  config_v1CV.yaml
Configs/UKBB208/: dataNpath_F20208_time2slc_4ChTransverse_Crop128.json  dataNpath_F20208_time2slc_4ChTransverse_Crop128_conf_3pheno.json
Engineering/: constants.py  utilities.py
Engineering/Engines/: MainEngine.py
Engineering/Engines/AuxiliaryEngines/: ClassifyLatentEngine.py  DiffAEEngine.py  ReconEngine.py
Engineering/Engines/WarpDrives/: __init__.py
Engineering/Engines/WarpDrives/DiffAE/: config.py  metrics.py  templates.py  templates_latent.py
Engineering/Engines/WarpDrives/DiffAE/diffusion/: base.py  diffusion.py
Engineering/Engines/WarpDrives/DiffAE/model/: blocks.py  nn.py  unet.py  unet_autoenc.py
Engineering/Engines/WarpDrives/pythaeDrive/: __init__.py  pythaeStation.py
Engineering/Engines/WarpDrives/pythaeDrive/configs/: __init__.py  factor_vae_config_gammaHalf.json  factor_vae_config_gammaQuarter.json
Engineering/Engines/WarpDrives/pythaeDrive/custom_models/: __init__.py
Engineering/Engines/WarpDrives/pythaeDrive/nn/: __init__.py  (+4 more)
Engineering/Eval/: latte_wrapper.py
Engineering/Science/: complex.py  conv_flavours.py  freq_trans.py  misc.py  stardate.py
Engineering/Science/losses/: __init__.py  channel_weighted.py  masked_loss.py
Engineering/Science/losses/pLoss/: VesselSeg_UNet3d_DeepSup.py  perceptual_loss.py
Engineering/Science/optims/: mtadam.py
Engineering/data/: datamodule.py  latent_datamodule.py
Engineering/data/datasets/: ukbbImgH5.py  ukbbImgZarr.py
Engineering/transforms/: augmentations.py  transforms.py
Executors/: __init__.py  main_diffAE.py  main_latentcls.py  main_recon.py
(+33 files in other folders)
